tests/expected_invalid_parse_missing_param_comma.diag.out
<input>:2:26: error: expected ',' between parameters
    public fn pair(left: Int right: Int) -> Int {
                             ^^^^^
